# bwrap_devshell

./: Readme.md  default.nix  flake.nix  pyproject.toml
bwrap_devshell/: __main__.py
